tests/golden/type_errors/named_payload_duplicate_field.err
Type error at 4:27: duplicate payload field value in variant pattern Result.Ok
    Result.Ok(value: first, value: second) => first,
                            ^
